desenvolvimento da edição de usuários

--- a/apps/backend/views/index.phtml
+++ b/apps/backend/views/index.phtml
@@ -11,9 +11,8 @@
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/style.css"/>
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/bootstrap.min.css"/>
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/sweet-alert.css"/>
-        <link rel="stylesheet" href="<?= URL_PROJECT ?>css/metisMenu.min.css"/>
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/timeline.css"/>
-        <link rel="stylesheet" href="<?= URL_PROJECT ?>css/sb-admin-2.css"/>
+        <link rel="stylesheet" href="<?= URL_PROJECT ?>css/dashboard.css"/>
 
         <!--[if lt IE 9]>
             <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
