--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,9 +1,6 @@
-/*!
- * Start Bootstrap - SB Admin 2 Bootstrap Admin Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
+/**
+ * Dashboard CSS
  */
-
 body {
     background-color: #f8f8f8;
 }
