--- a/apps/backend/views/settings/index.phtml
+++ b/apps/backend/views/settings/index.phtml
@@ -144,8 +144,8 @@
             <div id="MainMenu">
                 <li class="sidebar-search">
                     <div class="input-group">
-                        <!-- @todo: Buscar imagem de usuário, caso exista. E se não existir exibir a default;-->
-                        <img width="35%" class="img-circle" src="<?= URL_PROJECT ?>img/defaultProfile.png">
+                        <?php $img_profile = ($user_img == NULL) ? URL_PROJECT . "img/users/defaultProfile.png" : URL_PROJECT . "img/users/" . $user_img ?>
+                        <img width="35%" class="img-circle" src="<?= $img_profile; ?>">
                         <label style="margin-left: 20px;">Bem vindo<br/> <?= $user ?></label>
                     </div>
                     <!-- /input-group -->
