Desenvolvimento da edição básica do layout do blog

--- a/apps/frontend/views/index.phtml
+++ b/apps/frontend/views/index.phtml
@@ -12,7 +12,7 @@ footer {
     <head>
         <meta charset="utf-8">
         <title><?= $title ?></title>
-        <meta name="description" content="<?= $blog_name ?>">
+        <meta name="description" content="<?= $layout->layout_title ?>">
         <meta name="author" content="viniciusilveira">
         <link rel="shortcut icon" href="<?= URL_PROJECT ?>img/logo.png"/>
         <link rel="stylesheet" href="<?= URL_PROJECT ?>css/style.css"/>
